feature/ARMRFW-1 aulas 40 a 45

--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,35361],[],[[5,0,6,[7,8,9,10],[1,714,9001],[]],[11,0,12,[8,10,13],[1,10114,5790],[]],[14,0,15,[16],[1,16153,8888],[]],[17,0,18,[19],[1,25281,9491],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,9944],[[4,5,6,0,[],[0,17,9926],[[7,8,9,0,[],[0,19,9923],[[10,11,12,0,[],[0,21,9919],[[13,14,15,16,[],[0,23,9914],[],[[17,0,18,[19],[0,748,8416,20],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon tests","*C:\\RobotFramework\\WebApplicationTest\\Amazon\\tests\\Amazon_tests.robot","*../tests/Amazon_tests.robot","*<p>Suite de testes para o site Amazon.com.br\x3c/p>","*CT 01 - Access &quot;Eletrônicos&quot; Menu","*<p>Validar o acesso ao menu \"Eletrônicos\" e verifica a categoria \"Computadores e Informática\"\x3c/p>","*category","*functional","*menu","*regression","*CT 02 - Search a Product","*<p>Testar a busca do produto \"Xbox Series S\" através do campo de pesquisa e validar o resultado da pesquisa\x3c/p>","*search_product","*CT 03 - Add Product to Cart","*<p>Testar e verificar a adição de um produto no carrinho de compras\x3c/p>","*add_cart","*CT 04 - Remove Product to Cart","*<p>Testar e verificar a remoção de um produto no carrinho de compras\x3c/p>","*remove_cart"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Armc-Robot-Framework","*C:\\Automation\\armc-robot-framework","*..","*WebApplicationTest","*C:\\Automation\\armc-robot-framework\\WebApplicationTest","*../WebApplicationTest","*Amazon","*C:\\Automation\\armc-robot-framework\\WebApplicationTest\\Amazon","*../WebApplicationTest/Amazon","*Tests","*C:\\Automation\\armc-robot-framework\\WebApplicationTest\\Amazon\\tests","*../WebApplicationTest/Amazon/tests","*Amazon tests","*C:\\Automation\\armc-robot-framework\\WebApplicationTest\\Amazon\\tests\\Amazon_tests.robot","*../WebApplicationTest/Amazon/tests/Amazon_tests.robot","*<p>Suite de testes para o site Amazon.com.br\x3c/p>","*CT 03 - Add Product to Cart","*<p>Testar e verificar a adição de um produto no carrinho de compras\x3c/p>","*add_cart","*Element count for selector `div.sg-col-inner div div &gt; a &gt;&gt; \"Console Xbox Series S\"` is '0' (int) should be greater than or equal '1.0' (float)"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"add_cart","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"category","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"label":"functional","pass":2,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"menu","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"label":"regression","pass":2,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"remove_cart","pass":1,"skip":0},{"elapsed":"00:00:06","fail":0,"label":"search_product","pass":1,"skip":0}],[{"elapsed":"00:00:35","fail":0,"id":"s1","label":"Amazon tests","name":"Amazon tests","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:08","fail":1,"label":"add_cart","pass":0,"skip":0}],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"Armc-Robot-Framework","name":"Armc-Robot-Framework","pass":0,"skip":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1","label":"Armc-Robot-Framework.WebApplicationTest","name":"WebApplicationTest","pass":0,"skip":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1-s1","label":"Armc-Robot-Framework.WebApplicationTest.Amazon","name":"Amazon","pass":0,"skip":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1-s1-s1","label":"Armc-Robot-Framework.WebApplicationTest.Amazon.Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1-s1-s1-s1","label":"Armc-Robot-Framework.WebApplicationTest.Amazon.Tests.Amazon tests","name":"Amazon tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1650488276654;
+window.output["baseMillis"] = 1655501123948;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 35375;
+window.output["generated"] = 9952;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
